k8s/04-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: hellok8s
  labels:
    app: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: web
