k8s/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hellok8s
  name: tls-example-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod-1"
spec:
  tls:
  - hosts:
      - hellok8s.bas.codes
    secretName: letsencrypt-prod-1
  rules:
  - host: hellok8s.bas.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
